poke-gate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poke-gate
  labels:
    name: poke-gate
